  * setup.sh is now more robust (MBR write fix, 64-bit-only systems warning)

  * Cables communication now maintains repudiability
  * Added Open Virtualization bundle (OVA) (backported to 2011.2)

  * Better support for VMware and VirtualBox virtualization
  * Better support for regular mailboxes in Claws-Mail
  * Better Bluetooth support
  * Replaced SCIM with uim
  * Added gFTP file transfer client
  * Added uGet download manager
  * Replaced Xarchiver with File Roller
  * Unsafe Browser execution environment is sanitized with pam_namespace
  * Laptop Mode Tools do not wake up drives on PM state changes

  * Unsafe Browser now refuses to run once Tor has established a circuit
  * Added keyboard layout configuration via locale customization applet
  * Added test-liberte, an automatic network policy testing script
  * Build scripts do not require SquashFS tools or cdrtools anymore


2011-11-07
  + 2011.2 release

  * ISO image generation, useful for VMs and independent installs
  * Support for installing to ext2/3/4 filesystems
  * Directories are hidden on FAT (during install) and ISO (in Joliet layer)
  * Added silent splash theme, which also disables logo in X server
  * Added configuration-gathering tool for bug reporting

  * Kernel 2.6.39 with SquashFS XZ compression and NX support
  * Requirements bumped to PentiumIII+ (implies MMX, SSE) with PAE
  * All RAM is wiped on shutdown/reboot, regardless of 3GiB address space limit
  * Xorg server 1.10, better touchpad support
  * Better integration as VirtualBox (including clipboard), VMWare, QEMU guest
  * VirtualBox shares are now supported as automount directories
  * HFS and HFS+ filesystems are now supported as read-only automounts

  * Optional I2P support via gentoo=i2p kernel argument
  * HTP time daemon has been hardened and extended to aid I2P service
  * OTFE partition now supports file permissions, sanitized during boot
  * OTFE partition now uses NTFS compression for all data