@@ -29,7 +29,7 @@ MAKEOPTS="-j3"
 # USE flags (aggregative)
 USE="aac acpi action_modeswitch alsa archive aspell bluetooth bs2b cairo
      caps cdda cjk consolekit cue dbus dhcp djvu eap-tls edd exif expat flac
-     gmp grammar gconf groupwise gtk hires-icons hwdb hybrid-auth id3tag idn
+     gmp grammar groupwise gtk hires-icons hwdb hybrid-auth id3tag idn
      iproute2 irda jbig jpeg jpeg2k keymap lcms libkms libnotify lzma
      m17n-lib mad madwifi mktemp mmx mp3 multicall networkmanager ntfsprogs
      ogg opengl ots pcmcia pcsc-lite pkcs11 png policykit pth scsi silc
