@@ -1,0 +1,4 @@
+#!/bin/sh
+
+export TZ=:UTC
+exec /usr/bin/epiphany "$@"
