@@ -1,0 +1,46 @@
+<?xml version="1.0"?>
+<rdf:RDF xmlns="http://purl.org/rss/1.0/" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:ephy="http://gnome.org/ns/epiphany#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
+  <channel rdf:about="file:///home/anon/.gnome2/epiphany/bookmarks.rdf">
+    <title>Epiphany bookmarks</title>
+    <link>http://www.gnome.org/projects/epiphany/</link>
+    <items>
+      <rdf:Seq>
+        <rdf:li rdf:resource="http://3g2upl4pq6kufc4m.onion"/>
+        <rdf:li rdf:resource="https://startpage.com"/>
+        <rdf:li rdf:resource="https://ixquick.com"/>
+        <rdf:li rdf:resource="https://en.wikipedia.org"/>
+        <rdf:li rdf:resource="http://www.thefreedictionary.com"/>
+      </rdf:Seq>
+    </items>
+  </channel>
+  <item rdf:about="http://3g2upl4pq6kufc4m.onion">
+    <title>DuckDuckGo</title>
+    <link>http://3g2upl4pq6kufc4m.onion</link>
+    <ephy:smartlink>http://3g2upl4pq6kufc4m.onion/html/?q=%s</ephy:smartlink>
+    <dc:subject>Search Engines</dc:subject>
+  </item>
+  <item rdf:about="https://startpage.com">
+    <title>Ixquick via Google</title>
+    <link>https://startpage.com</link>
+    <ephy:smartlink>https://startpage.com/do/search?query=%s</ephy:smartlink>
+    <dc:subject>Search Engines</dc:subject>
+  </item>
+  <item rdf:about="https://ixquick.com">
+    <title>Ixquick</title>
+    <link>https://ixquick.com</link>
+    <ephy:smartlink>https://ixquick.com/do/search?query=%s</ephy:smartlink>
+    <dc:subject>Search Engines</dc:subject>
+  </item>
+  <item rdf:about="https://en.wikipedia.org">
+    <title>Search Wikipedia</title>
+    <link>https://en.wikipedia.org</link>
+    <ephy:smartlink>https://en.wikipedia.org/wiki/Special:Search/%s</ephy:smartlink>
+    <dc:subject>Search Engines</dc:subject>
+  </item>
+  <item rdf:about="http://www.thefreedictionary.com">
+    <title>The Free Dictionary</title>
+    <link>http://www.thefreedictionary.com</link>
+    <ephy:smartlink>http://www.thefreedictionary.com/%s</ephy:smartlink>
+    <dc:subject>Search Engines</dc:subject>
+  </item>
+</rdf:RDF>
