@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<toolbars version="1.1">
+  <toolbar name="DefaultToolbar" hidden="false" editable="true">
+    <toolitem name="NavigationBack"/>
+    <toolitem name="NavigationForward"/>
+    <toolitem name="ViewStop"/>
+    <toolitem name="ViewReload"/>
+    <toolitem name="Location"/>
+    <toolitem name="ViewZoomOut"/>
+    <toolitem name="ViewZoomIn"/>
+  </toolbar>
+</toolbars>
