@@ -1,3 +1,3 @@
 [Preferred Applications]
-WebBrowser=midori.desktop
+WebBrowser=epiphany.desktop
 MailClient=claws-mail.desktop
