@@ -1,35 +1,0 @@
-
-[DuckDuckGo]
-name=DuckDuckGo
-text=DuckDuckGo Tor hidden service
-uri=http://3g2upl4pq6kufc4m.onion/html/?q=%s
-icon=
-token=dd
-
-[Ixquick via Google]
-name=Ixquick via Google
-text=Ixquick private search engine, results via Google
-uri=https://startpage.com/do/search?query=%s
-icon=
-token=ig
-
-[Ixquick]
-name=Ixquick
-text=Ixquick private search engine
-uri=https://ixquick.com/do/search?query=%s
-icon=
-token=ix
-
-[Wikipedia]
-name=Wikipedia
-text=The free encyclopedia
-uri=https://en.wikipedia.org/wiki/Special:Search/%s
-icon=
-token=wp
-
-[The Free Dictionary]
-name=The Free Dictionary
-text=Dictionary, Encyclopedia and Thesaurus
-uri=http://www.thefreedictionary.com/%s
-icon=
-token=fd
