@@ -1,13 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE xbel PUBLIC "+//IDN python.org//DTD XML Bookmark Exchange Language 1.0//EN//XML" "http://www.python.org/topics/xml/dtds/xbel-1.0.dtd">
-<xbel version="1.0" xmlns:midori="http://www.twotoasts.de">
-<info>
-<metadata midori:current="0" owner="http://www.twotoasts.de"/>
-</info>
-<bookmark href="file:///home/anon/info/browser.html">
-<title>‪Safe Browser</title>
-<info>
-<metadata midori:history-step="2" midori:icon="text-html" owner="http://www.twotoasts.de"/>
-</info>
-</bookmark>
-</xbel>
