@@ -1,41 +1,0 @@
-
-[Dial 1]
-uri=#
-title=
-
-[Dial 2]
-uri=#
-title=
-
-[Dial 3]
-uri=#
-title=
-
-[Dial 4]
-uri=#
-title=
-
-[Dial 5]
-uri=#
-title=
-
-[Dial 6]
-uri=#
-title=
-
-[Dial 7]
-uri=#
-title=
-
-[Dial 8]
-uri=#
-title=
-
-[Dial 9]
-uri=#
-title=
-
-[settings]
-columns=3
-rows=3
-size=MEDIUM
