@@ -338,7 +338,7 @@
           <enabled>true</enabled>
           <name>Browser</name>
         </startupnotify>
-        <command>midori</command>
+        <command>epiphany</command>
       </action>
     </keybind>
     <keybind key="XF86AudioRaiseVolume">
