@@ -6,9 +6,11 @@
 /config/images/liberte-logo-wallpaper.png
 
 # Browsing
-/config/midori/running
-/config/midori/tabtrash.xbel
-/config/midori/history.db*
+/config/gnome2/epiphany/cookies.sqlite
+/config/gnome2/epiphany/ephy-history.xml
+/config/gnome2/epiphany/ephy-bookmarks.xml
+/config/gnome2/epiphany/ephy-favicon-cache.xml
+/config/gnome2/epiphany/favicon_cache/
 
 # Mail
 /config/claws-mail/menurc
@@ -25,11 +27,9 @@
 
 # Instant messaging
 # /config/purple/xmpp-caps.xml
-# /config/purple/logs/
 /config/xchat/scrollback/
 
 # Miscellaneous
-/config/mplayer/registry
 /config/audacious/plugin-registry
 /config/fbreader/*.db
 
@@ -38,6 +38,7 @@
 /config/audacious/log
 /config/geeqie/history
 /config/gftp/gftp.log
+# /config/purple/logs/
 
 # Transient directories
 /config/qalculate/tmp/
