@@ -36,17 +36,13 @@
           <a href="http://browserspy.dk/">BrowserSpy</a>,
           <a href="https://check.torproject.org/">Tor Check</a></li>
       <li><p><a href="http://dee.su/liberte">Liberté Linux</a>
-          (check for updates), <a href="https://forum.dee.su/">Discussion Portal</a>
-          (select <em>Safari</em> browser identification to post)</p></li>
+          (check for updates), <a href="https://forum.dee.su/">Discussion Portal</a></p></li>
     </ul>
 
     <p>
       Lastly, remember that web browser is a program that is most exposed to
       malicious attacks. Visit only trusted sites! Turn on script support
       only when necessary in order to prevent browser fingerprinting.
-      <a href="http://software.twotoasts.de/">Midori</a> is not known for its
-      stability, and additionally it has non-executable pages protection turned
-      off.
     </p>
   </body>
 </html>
