@@ -1,14 +1,15 @@
-# GStreamer video plugins in Midori fail without access
-# to audio devices. An alternative to disabling audio in
-# ALSA is temporairly granting playback access:
+# GStreamer video plugins in WebKit-based browsers fail without
+# access to audio devices. An alternative to disabling audio in
+# ALSA is temporarily granting playback access:
 #   setfacl -m u:nofw:rw /dev/snd/{control*,pcm*p}
 #   setfacl -x u:nofw    /dev/snd/{control*,pcm*p}
-# Playback is too fast: (#404115)
 
-ctl.!default {
-    type null
-}
-
-pcm.!default {
-    type null
-}
+# Playback in Midori is too fast: (#404115),
+# Epiphany just hangs with 100% CPU
+# ctl.!default {
+#     type null
+# }
+#
+# pcm.!default {
+#     type null
+# }
