@@ -1,30 +1,0 @@
-
-[settings]
-default-encoding=UTF-8
-spell-checking-languages=en-us,en;q=0.5
-enable-site-specific-quirks=true
-enable-java-applet=false
-last-window-width=798
-last-window-height=549
-toolbar-style=MIDORI_TOOLBAR_SMALL_ICONS
-toolbar-items=TabNew,Back,Forward,Next,ReloadStop,BookmarkAdd,Location,Search,Trash,CompactMenu,
-homepage=file:///home/nofw/info/warning.html
-text-editor=gedit %U
-location-entry-search=https://duckduckgo.com/html/?q=%s
-preferred-encoding=MIDORI_ENCODING_UNICODE
-open-tabs-in-the-background=true
-enable-scripts=false
-enable-plugins=false
-enable-html5-database=true
-maximum-cookie-age=1
-maximum-history-age=1
-maximum-cache-size=20
-identify-as=MIDORI_IDENT_CUSTOM
-user-agent=Mozilla/5.0 (Windows NT 6.1; rv:5.0) Gecko/20100101 Firefox/5.0
-preferred-languages=en-us,en;q=0.5
-strip-referer=true
-
-[extensions]
-libcookie-manager.so=true
-libshortcuts.so=true
-libstatusbar-features.so=true
