@@ -180,7 +180,7 @@ app-office/gnumeric
 mail-client/claws-mail
 app-crypt/gpa
 sci-calculators/qalculate-gtk
-www-client/midori
+www-client/epiphany
 app-text/fbreader
 net-irc/xchat
 net-im/pidgin
@@ -201,6 +201,7 @@ media-plugins/gst-plugins-speex
 media-plugins/gst-plugins-x264
 media-plugins/gst-plugins-ximagesrc
 media-plugins/gst-plugins-xvid
+www-client/epiphany-extensions
 net-irc/xchat-otr
 x11-plugins/pidgin-otr
 x11-plugins/pidgin-libnotify
@@ -319,6 +320,7 @@ x11-misc/pcmanfm
 lxde-base/lxrandr
 lxde-base/lxinput
 lxde-base/lxappearance
+gnome-base/dconf
 gnome-extra/gconf-editor
 x11-misc/obconf
 x11-misc/xdg-utils
